--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.thymeleaf.mode=HTML
 #persist the data
-spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db102
+spring.datasource.url=jdbc:h2:file:~/newDatabase
 #spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
@@ -11,5 +11,5 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true 
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
